[tool.poetry]
name = "poet-api"
version = "1.2.18"
description = "Requests for all"
authors = ["raratiru"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
pyrate-limiter = "^2"
aiohttp = "^3.11.13"
filelock = "^3.12.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5"
bandit = "^1.7.4"
flake8 = "^7.2.0"
pytest = "^8.2.2"
pytest-mock = "^3.10.0"
pytest-cov = "*"
pytest-factoryboy = "*"
ipykernel = "*"
pytest-xdist = "^3.3.1"
django-devapp = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["*/settings/*"]
include = ["api/*"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "api"
]
console_output_style = "count"
addopts = """
  --cov --cov-branch --cov-report term-missing:skip-covered --log-cli-level=info
  --pdb -s -vvv
  """
